solved hero image "skip" button timing and visibility issue.

--- a/assets/css/global-style.css
+++ b/assets/css/global-style.css
@@ -1128,6 +1128,7 @@ a #contact-prefs:hover {
   opacity: .7;
 }
 
+.hero-visibility-wrap,
 .sprite-section-print-wrap,
 .sprite-section-video-wrap,
 .sprite-section-outdoor-wrap,
